--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1794,7 +1794,8 @@ input, select, textarea {
 
 	header.major h2 {
 		color: #F89D28;
-		font-size: 2.5em;
+		font-size: 3.0em;
+                margin-bottom: 40px;
 	}
 
 		header.major h2 + p {
